--- a/Jan21/index.html
+++ b/Jan21/index.html
@@ -30,6 +30,20 @@
             <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita, explicabo, asperiores impedit voluptates quaerat inventore esse quo ex omnis quae adipisci ea sapiente eum, necessitatibus accusantium amet! Quos, molestiae. Assumenda nulla quisquam a veniam unde alias exercitationem cumque fugiat optio soluta, ea iure pariatur, ducimus, omnis hic placeat aperiam. Rerum.
             </p>
+
+            <form id="label">
+                <div>
+                    <label for="name">Name:</label>
+                    <input id="name" type="text">
+                </div>
+                <div>
+                    <label for="surname">Surname :</label>
+                    <input id="surname" type="text">
+                </div>
+                <div>
+                    <input type="submit" value="Submit">
+                </div>
+            </form>
         </div>
     </div>
 
